livelint/testdata/insufficient-cpu-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insufficient-cpu
  namespace: app-benchmark-test
  labels:
    app: insufficient-cpu
spec:
  replicas: 1
  template:
    metadata:
      name: insufficient-cpu
      labels:
        app: insufficient-cpu
    spec:
      containers:
        - name: awesome-node
          image: bespinian/awesome-node:1.0.6
          env:
            - name: "HEALTHCHECK_LEAK_MEMORY"
              value: "TRUE"
            - name: "HEALTHCHECK_LEAK_INCREMENT_KB"
              value: "5000"
          resources:
            limits:
              cpu: "20"
              memory: 120M
            requests:
              cpu: "20"
              memory: 120M
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 2
  selector:
    matchLabels:
      app: insufficient-cpu
