livelint/testdata/ok-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ok
  namespace: app-benchmark-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ok
