livelint/testdata/pending-volume-mount.yml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pending-volume-test
  namespace: app-benchmark-test
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: inexistent-storage-class
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pending-volume-test
  namespace: app-benchmark-test
  labels:
    app: pending-volume-test
spec:
  replicas: 1
  template:
    metadata:
      name: pending-volume-test
      labels:
        app: pending-volume-test
    spec:
      containers:
        - name: awesome-node
          image: bespinian/awesome-node:1.0.6
          env:
            - name: "HEALTHCHECK_LEAK_MEMORY"
              value: "FALSE"
            - name: "HEALTHCHECK_LEAK_INCREMENT_KB"
              value: "0"
          resources:
            limits:
              cpu: 100m
              memory: 120M
            requests:
              cpu: 100m
              memory: 120M
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 2
          volumeMounts:
            - mountPath: /mnt/test
              name: vol
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: pending-volume-test
  selector:
    matchLabels:
      app: pending-volume-test
