livelint/testdata/resource-quota-test.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app-benchmark-quota-test
---
apiVersion: v1
kind: ResourceQuota
metadata:
  namespace: app-benchmark-quota-test
  name: cpu-quota
spec:
  hard:
    cpu: "150m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-quota-exceeding
  namespace: app-benchmark-quota-test
  labels:
    app: cpu-quota-exceeding
spec:
  replicas: 2
  template:
    metadata:
      name: cpu-quota-exceeding
      labels:
        app: cpu-quota-exceeding
    spec:
      containers:
        - name: awesome-node
          image: bespinian/awesome-node:1.0.6
          env:
            - name: "HEALTHCHECK_LEAK_MEMORY"
              value: "FALSE"
            - name: "HEALTHCHECK_LEAK_INCREMENT_KB"
              value: "0"
          resources:
            limits:
              cpu: "100m"
              memory: 120M
            requests:
              cpu: "100m"
              memory: 120M
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 2
  selector:
    matchLabels:
      app: cpu-quota-exceeding
